--- a/myBlogV2/css/main.css
+++ b/myBlogV2/css/main.css
@@ -101,6 +101,22 @@ margin, padding 의 값 지정
     background-image: url("images/img_003.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+
+    /* R, G, B */
+    /*
+    16진수 색상표현 #으로 시작하고
+    16진수 00~FF 범위의 값을 표현하면 된다.
+    */
+    background-color: #3a79d6;
+
+    /*
+    10진수 타입으로 색상표현
+    rgb() 함수를 사용하여 각각 R, G, B값을
+    0 ~ 255 범위에서 표현하면 된다.
+    */
+    background-color: rgb(0, 255, 0);
+
+    background-color: rgba(149, 255, 117, 0.2);
 }
 
 #blog_body:hover {
